# Titled-Goose-Game

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
Assets/: bg_wood.png24  blue.png24  brick_red.png24  cotton_red.png24  cube_blue.png24  cube_green.png24  cube_purple.png24  cube_white.png24  diceRed1.png24  diceRed2.png24  diceRed4.png24  diceRed5.png24  edgeDice.png24  evanescence.png24  fenetre.png24  glass.png24  green.png24  kaaris.png24  mcqueen_face.png24  pulp.png24  purple.png24  red.png24  table.png24  trunk_side.png24  wood.png24  wood_red.png24
Assets/alterDice/: diceRed1.png24  diceRed2.png24  diceRed3.png24  diceRed4.png24  diceRed6.png24
Include/GL/internal/: .editorconfig
Include/PNG/Png/: pngconf.h
Lib/: LibTexture.lib
LibTexture/: LibTexture.vcxproj  LibTexture.vcxproj.filters
LibTexture/Release/: LibTexture.pch
LibTexture/Release/LibTexture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  LibTexture.lastbuildstate
Projet/: Titled_Goose_Game.sln  Titled_Goose_Game.vcxproj  Titled_Goose_Game.vcxproj.filters
Src/: Jeu_Oie_test.cpp  Shapes.cpp  Shapes.h
Src/View/: Colors.h  Lights.cpp  Lights.h  Materials.cpp  Materials.h  SceneSettings.h  Settings.h  View.cpp  View.h
Src/View/Camera/: Camera.cpp  Camera.h
Src/View/Geometry/: Furnitures.cpp  Furnitures.h  Shapes.cpp  Shapes.h  Texture.cpp  Texture.h
Src/controller/: Controller.cpp  Controller.h
Src/model/: Board.cc  Board.h  Cell.cc  Cell.h  Dice.cc  Dice.h  Game.cc  Game.h  Player.cc  Player.h
Src/tests/: CMakeLists.txt  unit_test.cc
Temp/Release/Titled_Goose_Game/: Titled_Goose_Game.exe.recipe  Titled_Goose_Game.iobj  Titled_Goose_Game.ipdb  Titled_Goose_Game.vcxproj.FileListAbsolute.txt
tests/: CMakeLists.txt  hello_test.cc
(+12 files in other folders)
